--- a/studio/package.json
+++ b/studio/package.json
@@ -15,6 +15,7 @@
     "sanity"
   ],
   "dependencies": {
+    "@sanity/document-internationalization": "^4.1.1",
     "@sanity/vision": "^3.62.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
