change on language selector

--- a/studio/.env.example
+++ b/studio/.env.example
@@ -1,4 +1,10 @@
 # Sanity Project Configuration
 # Get these values from https://www.sanity.io/manage
-SANITY_STUDIO_PROJECT_ID=y0cdogbw
-SANITY_STUDIO_DATASET=test
+SANITY_STUDIO_PROJECT_ID=your-project-id
+SANITY_STUDIO_DATASET=production
+
+# Sanity API Token (for import/migration scripts)
+# Create a token at: https://www.sanity.io/manage/personal/tokens
+# Permissions: Editor or Admin
+# IMPORTANT: Keep this token secret! Do not commit to git.
+SANITY_API_TOKEN=your-api-token-here
