--- a/studio/package.json
+++ b/studio/package.json
@@ -9,13 +9,16 @@
     "build": "sanity build",
     "deploy": "sanity deploy",
     "deploy-graphql": "sanity graphql deploy",
-    "import": "tsx import-content.ts"
+    "import": "tsx import-all-i18n.ts",
+    "import-full": "tsx full-migration-7lang.ts",
+    "cleanup": "tsx cleanup-language-field.ts",
+    "link-images": "tsx link-category-images-i18n.ts"
   },
   "keywords": [
     "sanity"
   ],
   "dependencies": {
-    "@sanity/document-internationalization": "^4.1.1",
+    "@sanity/document-internationalization": "^3.1.2",
     "@sanity/vision": "^3.62.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
